tests/snapshots/semantic_analysis_tests__calc.snap
---
source: tests/semantic_analysis_tests.rs
expression: "format!(\"{:#?}\", tree)"
---
AbstractSyntaxTree {
    node: File,
    children: [
        AbstractSyntaxTree {
            node: Callable {
                result_type: Int,
                name: "Main",
                arguments: [],
            },
            children: [
                AbstractSyntaxTree {
                    node: Declaration {
                        typ: Int,
                        name: "a",
                        expression: Some(
                            Literal {
                                typ: Int,
                                value: "1",
                            },
                        ),
                    },
                    children: [],
                },
                AbstractSyntaxTree {
                    node: Declaration {
                        typ: Int,
                        name: "b",
                        expression: Some(
                            Literal {
                                typ: Int,
                                value: "2",
                            },
                        ),
                    },
                    children: [],
                },
                AbstractSyntaxTree {
                    node: Declaration {
                        typ: Int,
                        name: "c",
                        expression: Some(
                            Literal {
                                typ: Int,
                                value: "3",
                            },
                        ),
                    },
                    children: [],
                },
                AbstractSyntaxTree {
                    node: Declaration {
                        typ: Int,
                        name: "d",
                        expression: Some(
                            BinaryOperator {
                                typ: Int,
                                left: BinaryOperator {
                                    typ: Int,
                                    left: Variable {
                                        typ: Int,
                                        name: "a",
                                    },
                                    operator: Add,
                                    right: Variable {
                                        typ: Int,
                                        name: "b",
                                    },
                                },
                                operator: Multiply,
                                right: Variable {
                                    typ: Int,
                                    name: "c",
                                },
                            },
                        ),
                    },
                    children: [],
                },
                AbstractSyntaxTree {
                    node: Return {
                        value: Some(
                            Variable {
                                typ: Int,
                                name: "d",
                            },
                        ),
                    },
                    children: [],
                },
            ],
        },
    ],
}
