tests/snapshots/semantic_analysis_tests__classes.snap
---
source: tests/semantic_analysis_tests.rs
expression: "format!(\"{:#?}\", tree)"
---
AbstractSyntaxTree {
    node: File,
    children: [
        AbstractSyntaxTree {
            node: Class {
                name: "Node",
            },
            children: [
                AbstractSyntaxTree {
                    node: Declaration {
                        typ: Int,
                        name: "counter",
                        expression: Some(
                            Literal {
                                typ: Int,
                                value: "5",
                            },
                        ),
                    },
                    children: [],
                },
                AbstractSyntaxTree {
                    node: Callable {
                        result_type: Int,
                        name: "Increment",
                        arguments: [],
                    },
                    children: [
                        AbstractSyntaxTree {
                            node: Return {
                                value: Some(
                                    Increment {
                                        typ: Int,
                                        expression: Field {
                                            typ: Int,
                                            object: This {
                                                typ: Class(
                                                    "Node",
                                                ),
                                            },
                                            name: "counter",
                                        },
                                        postfix: true,
                                    },
                                ),
                            },
                            children: [],
                        },
                    ],
                },
            ],
        },
        AbstractSyntaxTree {
            node: Callable {
                result_type: Void,
                name: "Main",
                arguments: [],
            },
            children: [
                AbstractSyntaxTree {
                    node: Declaration {
                        typ: Class(
                            "Node",
                        ),
                        name: "node",
                        expression: Some(
                            New {
                                typ: Class(
                                    "Node",
                                ),
                                class_name: "Node",
                            },
                        ),
                    },
                    children: [],
                },
                AbstractSyntaxTree {
                    node: Expression {
                        expression: MethodCall {
                            typ: Int,
                            object: Variable {
                                typ: Class(
                                    "Node",
                                ),
                                name: "node",
                            },
                            name: "Increment",
                            arguments: [],
                        },
                    },
                    children: [],
                },
                AbstractSyntaxTree {
                    node: Expression {
                        expression: MethodCall {
                            typ: Int,
                            object: Variable {
                                typ: Class(
                                    "Node",
                                ),
                                name: "node",
                            },
                            name: "Increment",
                            arguments: [],
                        },
                    },
                    children: [],
                },
                AbstractSyntaxTree {
                    node: Return {
                        value: None,
                    },
                    children: [],
                },
            ],
        },
    ],
}
