tests/snapshots/semantic_analysis_tests__for.snap
---
source: tests/semantic_analysis_tests.rs
expression: "format!(\"{:#?}\", tree)"
---
AbstractSyntaxTree {
    node: File,
    children: [
        AbstractSyntaxTree {
            node: Callable {
                result_type: Int,
                name: "Main",
                arguments: [],
            },
            children: [
                AbstractSyntaxTree {
                    node: Declaration {
                        typ: Int,
                        name: "x",
                        expression: Some(
                            Literal {
                                typ: Int,
                                value: "0",
                            },
                        ),
                    },
                    children: [],
                },
                AbstractSyntaxTree {
                    node: Scope,
                    children: [
                        AbstractSyntaxTree {
                            node: Declaration {
                                typ: Int,
                                name: "i",
                                expression: Some(
                                    Literal {
                                        typ: Int,
                                        value: "0",
                                    },
                                ),
                            },
                            children: [],
                        },
                        AbstractSyntaxTree {
                            node: While {
                                condition: BinaryOperator {
                                    typ: Bool,
                                    left: Variable {
                                        typ: Int,
                                        name: "i",
                                    },
                                    operator: Less,
                                    right: Literal {
                                        typ: Int,
                                        value: "10",
                                    },
                                },
                            },
                            children: [
                                AbstractSyntaxTree {
                                    node: Expression {
                                        expression: Assign {
                                            typ: Int,
                                            name: "x",
                                            value: BinaryOperator {
                                                typ: Int,
                                                left: Variable {
                                                    typ: Int,
                                                    name: "x",
                                                },
                                                operator: Add,
                                                right: Literal {
                                                    typ: Int,
                                                    value: "2",
                                                },
                                            },
                                        },
                                    },
                                    children: [],
                                },
                                AbstractSyntaxTree {
                                    node: Expression {
                                        expression: Increment {
                                            typ: Int,
                                            expression: Variable {
                                                typ: Int,
                                                name: "i",
                                            },
                                            postfix: true,
                                        },
                                    },
                                    children: [],
                                },
                            ],
                        },
                    ],
                },
                AbstractSyntaxTree {
                    node: Return {
                        value: Some(
                            Variable {
                                typ: Int,
                                name: "x",
                            },
                        ),
                    },
                    children: [],
                },
            ],
        },
    ],
}
