tests/snapshots/semantic_analysis_tests__return.snap
---
source: tests/semantic_analysis_tests.rs
assertion_line: 32
expression: "format!(\"{:#?}\", tree)"
---
AbstractSyntaxTree {
    node: File,
    children: [
        AbstractSyntaxTree {
            node: Callable {
                result_type: Int,
                name: "Main",
                arguments: [],
            },
            children: [
                AbstractSyntaxTree {
                    node: If {
                        condition: Literal {
                            typ: Bool,
                            value: "false",
                        },
                    },
                    children: [
                        AbstractSyntaxTree {
                            node: Return {
                                value: Some(
                                    Literal {
                                        typ: Int,
                                        value: "1",
                                    },
                                ),
                            },
                            children: [],
                        },
                        AbstractSyntaxTree {
                            node: Else,
                            children: [
                                AbstractSyntaxTree {
                                    node: If {
                                        condition: Literal {
                                            typ: Bool,
                                            value: "true",
                                        },
                                    },
                                    children: [
                                        AbstractSyntaxTree {
                                            node: Return {
                                                value: Some(
                                                    Literal {
                                                        typ: Int,
                                                        value: "2",
                                                    },
                                                ),
                                            },
                                            children: [],
                                        },
                                        AbstractSyntaxTree {
                                            node: Else,
                                            children: [
                                                AbstractSyntaxTree {
                                                    node: Return {
                                                        value: Some(
                                                            Literal {
                                                                typ: Int,
                                                                value: "3",
                                                            },
                                                        ),
                                                    },
                                                    children: [],
                                                },
                                            ],
                                        },
                                    ],
                                },
                            ],
                        },
                    ],
                },
            ],
        },
    ],
}
