tests/snapshots/semantic_analysis_tests__scopes.snap
---
source: tests/semantic_analysis_tests.rs
expression: "format!(\"{:#?}\", tree)"
---
AbstractSyntaxTree {
    node: File,
    children: [
        AbstractSyntaxTree {
            node: Class {
                name: "App",
            },
            children: [
                AbstractSyntaxTree {
                    node: Callable {
                        result_type: Int,
                        name: "f",
                        arguments: [
                            Variable {
                                name: "x",
                                typ: Int,
                            },
                        ],
                    },
                    children: [
                        AbstractSyntaxTree {
                            node: Return {
                                value: Some(
                                    BinaryOperator {
                                        typ: Int,
                                        left: Variable {
                                            typ: Int,
                                            name: "x",
                                        },
                                        operator: Add,
                                        right: Literal {
                                            typ: Int,
                                            value: "5",
                                        },
                                    },
                                ),
                            },
                            children: [],
                        },
                    ],
                },
                AbstractSyntaxTree {
                    node: Callable {
                        result_type: Void,
                        name: "Main",
                        arguments: [],
                    },
                    children: [
                        AbstractSyntaxTree {
                            node: Declaration {
                                typ: Int,
                                name: "x",
                                expression: Some(
                                    Literal {
                                        typ: Int,
                                        value: "0",
                                    },
                                ),
                            },
                            children: [],
                        },
                        AbstractSyntaxTree {
                            node: Declaration {
                                typ: Int,
                                name: "b",
                                expression: Some(
                                    Literal {
                                        typ: Int,
                                        value: "1",
                                    },
                                ),
                            },
                            children: [],
                        },
                        AbstractSyntaxTree {
                            node: If {
                                condition: BinaryOperator {
                                    typ: Bool,
                                    left: Variable {
                                        typ: Int,
                                        name: "x",
                                    },
                                    operator: Greater,
                                    right: Variable {
                                        typ: Int,
                                        name: "b",
                                    },
                                },
                            },
                            children: [
                                AbstractSyntaxTree {
                                    node: If {
                                        condition: BinaryOperator {
                                            typ: Bool,
                                            left: BinaryOperator {
                                                typ: Int,
                                                left: Variable {
                                                    typ: Int,
                                                    name: "x",
                                                },
                                                operator: Add,
                                                right: Literal {
                                                    typ: Int,
                                                    value: "1",
                                                },
                                            },
                                            operator: Greater,
                                            right: Variable {
                                                typ: Int,
                                                name: "b",
                                            },
                                        },
                                    },
                                    children: [
                                        AbstractSyntaxTree {
                                            node: Else,
                                            children: [],
                                        },
                                    ],
                                },
                                AbstractSyntaxTree {
                                    node: Else,
                                    children: [
                                        AbstractSyntaxTree {
                                            node: If {
                                                condition: BinaryOperator {
                                                    typ: Bool,
                                                    left: Variable {
                                                        typ: Int,
                                                        name: "x",
                                                    },
                                                    operator: Less,
                                                    right: Variable {
                                                        typ: Int,
                                                        name: "b",
                                                    },
                                                },
                                            },
                                            children: [
                                                AbstractSyntaxTree {
                                                    node: Else,
                                                    children: [],
                                                },
                                            ],
                                        },
                                    ],
                                },
                            ],
                        },
                        AbstractSyntaxTree {
                            node: While {
                                condition: Literal {
                                    typ: Bool,
                                    value: "true",
                                },
                            },
                            children: [
                                AbstractSyntaxTree {
                                    node: If {
                                        condition: BinaryOperator {
                                            typ: Bool,
                                            left: Variable {
                                                typ: Int,
                                                name: "x",
                                            },
                                            operator: Equal,
                                            right: Literal {
                                                typ: Int,
                                                value: "9",
                                            },
                                        },
                                    },
                                    children: [
                                        AbstractSyntaxTree {
                                            node: Expression {
                                                expression: Increment {
                                                    typ: Int,
                                                    expression: Variable {
                                                        typ: Int,
                                                        name: "x",
                                                    },
                                                    postfix: true,
                                                },
                                            },
                                            children: [],
                                        },
                                        AbstractSyntaxTree {
                                            node: Else,
                                            children: [
                                                AbstractSyntaxTree {
                                                    node: If {
                                                        condition: BinaryOperator {
                                                            typ: Bool,
                                                            left: Variable {
                                                                typ: Int,
                                                                name: "x",
                                                            },
                                                            operator: Equal,
                                                            right: Literal {
                                                                typ: Int,
                                                                value: "10",
                                                            },
                                                        },
                                                    },
                                                    children: [
                                                        AbstractSyntaxTree {
                                                            node: Break,
                                                            children: [],
                                                        },
                                                    ],
                                                },
                                            ],
                                        },
                                    ],
                                },
                                AbstractSyntaxTree {
                                    node: Expression {
                                        expression: Assign {
                                            typ: Int,
                                            name: "x",
                                            value: MethodCall {
                                                typ: Int,
                                                object: This {
                                                    typ: Class(
                                                        "App",
                                                    ),
                                                },
                                                name: "f",
                                                arguments: [
                                                    BinaryOperator {
                                                        typ: Int,
                                                        left: Variable {
                                                            typ: Int,
                                                            name: "x",
                                                        },
                                                        operator: Add,
                                                        right: Literal {
                                                            typ: Int,
                                                            value: "1",
                                                        },
                                                    },
                                                ],
                                            },
                                        },
                                    },
                                    children: [],
                                },
                            ],
                        },
                        AbstractSyntaxTree {
                            node: Scope,
                            children: [
                                AbstractSyntaxTree {
                                    node: Declaration {
                                        typ: Int,
                                        name: "i",
                                        expression: Some(
                                            Literal {
                                                typ: Int,
                                                value: "2",
                                            },
                                        ),
                                    },
                                    children: [],
                                },
                                AbstractSyntaxTree {
                                    node: While {
                                        condition: BinaryOperator {
                                            typ: Bool,
                                            left: Variable {
                                                typ: Int,
                                                name: "i",
                                            },
                                            operator: Less,
                                            right: Literal {
                                                typ: Int,
                                                value: "10",
                                            },
                                        },
                                    },
                                    children: [
                                        AbstractSyntaxTree {
                                            node: Expression {
                                                expression: BinaryOperator {
                                                    typ: Int,
                                                    left: Variable {
                                                        typ: Int,
                                                        name: "x",
                                                    },
                                                    operator: AssignAdd,
                                                    right: Literal {
                                                        typ: Int,
                                                        value: "2",
                                                    },
                                                },
                                            },
                                            children: [],
                                        },
                                        AbstractSyntaxTree {
                                            node: Expression {
                                                expression: Increment {
                                                    typ: Int,
                                                    expression: Variable {
                                                        typ: Int,
                                                        name: "i",
                                                    },
                                                    postfix: true,
                                                },
                                            },
                                            children: [],
                                        },
                                    ],
                                },
                            ],
                        },
                        AbstractSyntaxTree {
                            node: Return {
                                value: None,
                            },
                            children: [],
                        },
                    ],
                },
            ],
        },
    ],
}
