tests/snapshots/semantic_analysis_tests__while.snap
---
source: tests/semantic_analysis_tests.rs
expression: "format!(\"{:#?}\", tree)"
---
AbstractSyntaxTree {
    node: File,
    children: [
        AbstractSyntaxTree {
            node: Callable {
                result_type: Int,
                name: "f",
                arguments: [
                    Variable {
                        name: "x",
                        typ: Int,
                    },
                ],
            },
            children: [
                AbstractSyntaxTree {
                    node: Return {
                        value: Some(
                            BinaryOperator {
                                typ: Int,
                                left: Variable {
                                    typ: Int,
                                    name: "x",
                                },
                                operator: Add,
                                right: Literal {
                                    typ: Int,
                                    value: "5",
                                },
                            },
                        ),
                    },
                    children: [],
                },
            ],
        },
        AbstractSyntaxTree {
            node: Callable {
                result_type: Int,
                name: "Main",
                arguments: [],
            },
            children: [
                AbstractSyntaxTree {
                    node: Declaration {
                        typ: Int,
                        name: "x",
                        expression: Some(
                            Literal {
                                typ: Int,
                                value: "0",
                            },
                        ),
                    },
                    children: [],
                },
                AbstractSyntaxTree {
                    node: While {
                        condition: Literal {
                            typ: Bool,
                            value: "true",
                        },
                    },
                    children: [
                        AbstractSyntaxTree {
                            node: If {
                                condition: BinaryOperator {
                                    typ: Bool,
                                    left: Variable {
                                        typ: Int,
                                        name: "x",
                                    },
                                    operator: Equal,
                                    right: Literal {
                                        typ: Int,
                                        value: "9",
                                    },
                                },
                            },
                            children: [
                                AbstractSyntaxTree {
                                    node: Expression {
                                        expression: Increment {
                                            typ: Int,
                                            expression: Variable {
                                                typ: Int,
                                                name: "x",
                                            },
                                            postfix: true,
                                        },
                                    },
                                    children: [],
                                },
                                AbstractSyntaxTree {
                                    node: Else,
                                    children: [
                                        AbstractSyntaxTree {
                                            node: If {
                                                condition: BinaryOperator {
                                                    typ: Bool,
                                                    left: Variable {
                                                        typ: Int,
                                                        name: "x",
                                                    },
                                                    operator: Equal,
                                                    right: Literal {
                                                        typ: Int,
                                                        value: "10",
                                                    },
                                                },
                                            },
                                            children: [
                                                AbstractSyntaxTree {
                                                    node: Break,
                                                    children: [],
                                                },
                                            ],
                                        },
                                    ],
                                },
                            ],
                        },
                        AbstractSyntaxTree {
                            node: Expression {
                                expression: Assign {
                                    typ: Int,
                                    name: "x",
                                    value: FunctionCall {
                                        typ: Int,
                                        name: "f",
                                        arguments: [
                                            Variable {
                                                typ: Int,
                                                name: "x",
                                            },
                                        ],
                                    },
                                },
                            },
                            children: [],
                        },
                    ],
                },
                AbstractSyntaxTree {
                    node: Return {
                        value: Some(
                            Variable {
                                typ: Int,
                                name: "x",
                            },
                        ),
                    },
                    children: [],
                },
            ],
        },
    ],
}
